--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "author": "Charlie Cheever <ccheever@expo.io>",
   "dependencies": {
     "airtable": "^0.5.6",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mysql": "^2.15.0"
   },
   "scripts": {
     "start": "node ."
