--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "author": "Charlie Cheever <ccheever@expo.io>",
   "dependencies": {
     "airtable": "^0.5.6",
+    "assert": "^1.4.1",
     "express": "^4.16.3",
     "mysql": "^2.15.0"
   },
