--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "airtable": "^0.5.6",
     "assert": "^1.4.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mysql": "^2.15.0"
   },
