--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "assert": "^1.4.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "node ."
