--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,18 @@
     "express": "^4.16.3",
     "ip": "^1.1.5",
     "keypress": "^0.2.1",
+    "moment": "^2.22.2",
     "mysql": "^2.15.0",
+    "qrcode": "^1.2.0",
     "qrcode-terminal": "^0.12.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "opn": "^5.3.0"
   },
   "scripts": {
-    "start": "node ."
+    "start": "npx nodemon .",
+    "prod": "node ."
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
