--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,15 @@
   "author": "Charlie Cheever <ccheever@expo.io>",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "clearbit": "^1.3.4",
     "express": "^4.16.3",
     "ip": "^1.1.5",
     "moment": "^2.22.2",
     "mysql": "^2.15.0",
+    "opn": "^5.3.0",
     "qrcode": "^1.2.0",
     "qrcode-terminal": "^0.12.0",
-    "uuid": "^3.2.1",
-    "opn": "^5.3.0"
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "npx nodemon .",
