--- a/pound-random-app/package.json
+++ b/pound-random-app/package.json
@@ -15,7 +15,8 @@
     "moment": "^2.22.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
-    "react-navigation": "^2.2.5"
+    "react-navigation": "^2.2.5",
+    "react-navigation-fluid-transitions": "^0.2.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
