--- a/pound-random-app/.babelrc
+++ b/pound-random-app/.babelrc
@@ -3,6 +3,9 @@
   "env": {
     "development": {
       "plugins": ["transform-react-jsx-source", "babel-plugin-idx"]
+    },
+    "production": {
+      "plugins": ["react-native-paper/babel"]
     }
   }
 }
