--- a/pound-random-app/package.json
+++ b/pound-random-app/package.json
@@ -33,6 +33,7 @@
     "react-apollo": "^2.1.9",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "react-native-autolink": "^1.4.0",
+    "react-native-paper": "^2.0.1",
     "react-native-root-modal": "^3.1.1",
     "react-navigation": "^2.9.3",
     "react-navigation-fluid-transitions": "^0.2.0",
