Pin node version using the engines directive.
This enables automatic Node 10 detection on Render.

--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,9 @@
     "uuid": "^3.2.1",
     "validator": "^10.4.0"
   },
+  "engines": {
+    "node": ">=10 <11"
+  },
   "scripts": {
     "start": "npx nodemon .",
     "prod": "NODE_ENV=production node ."
