--- a/pound-random-app/package.json
+++ b/pound-random-app/package.json
@@ -12,6 +12,9 @@
       "git add"
     ]
   },
+  "engines": {
+    "node": ">=10 <11"
+  },
   "dependencies": {
     "apollo-boost": "^0.1.10",
     "apollo-cache-inmemory": "^1.2.6",
